codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_bad_result.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 请 补 充 说 明 （ 结 果 不 佳 ）
▌
▌ （ 可 选 ） 写 一 句 简 短 说 明 ， 帮 助 我 们 改 进

按  enter 确 认 ， 或 按  esc 返 回
