codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_other.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 请 补 充 说 明 （ 其 他 ）
▌
▌ （ 可 选 ） 写 一 句 简 短 说 明 ， 帮 助 我 们 改 进

按  enter 确 认 ， 或 按  esc 返 回
